--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "paypal/rest-api-sdk-php": "^1.14",
+        "srmklive/paypal": "^3.0",
+        "stripe/stripe-php": "^7.75",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
